--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ config/nvim/spell
 config/nvim/shada
 config/nvim/plugged
 config/nvim/autoload/plug.vim
+config/nvim/.netrwhist
 vim/vim.symlink/spell/
 vim/vim.symlink/plugged/
