--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -51,7 +51,7 @@ set-option -g set-titles-string "#T - #W"
 ######################
 
 # reload config file
-bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Config Reloaded!"
 
 # split window and fix path for tmux 1.9
 bind | split-window -h -c "#{pane_current_path}"
@@ -96,7 +96,24 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 bind-key -n C-Space resize-pane -Z
 
 ##############################
+### Plugins                ###
+##############################
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+set -g @plugin 'tmux-plugins/tpm'
+
+# Resurrect last tmux session (Computer Reboot)
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+
+# Load plugins here
+run -b '~/.config/tmux/plugins/tpm/tpm'
+
+##############################
 ### Color & Style Settings ###
 ##############################
 
-source ~/.dotfiles/tmux/base16.sh
+source ~/.config/tmux/lightline.sh
