--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -103,10 +103,10 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # Resurrect last tmux session (Computer Reboot)
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-capture-pane-contents 'off'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 
 # Load plugins here
