--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -27,5 +27,11 @@
         "reference": "\uf87a",
         "typeParameter": "\uf278",
         "default": "\uf29c"
+    },
+    "snippets.extends": {
+        "eruby": ["html"]
+    },
+    "emmet.includeLanguages": {
+        "eruby": "html"
     }
 }
