--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Windows Specifics
+Thumbs.db
+
+# Temp files
+*~
+*.swp
+
+# Mac OS Specifics
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
 plug.vim.old
 
 config/nvim/spell
