--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,3 +1,4 @@
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:~/.dotfiles/bin"
 set -g default-command "login-shell"
 
 # tmux display things in 256 colors
@@ -77,6 +78,7 @@ bind -r L resize-pane -R 10
 
 # enable mouse support for switching panes/windows
 setw -g mouse on
+set -g mouse on
 
 # set vi mode for copy mode
 setw -g mode-keys vi
@@ -102,11 +104,11 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
 set -g @plugin 'tmux-plugins/tpm'
 
 # Resurrect last tmux session (Computer Reboot)
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-capture-pane-contents 'off'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @resurrect-capture-pane-contents 'off'
 
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'off'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'off'
 
 
 # Load plugins here
